<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/browse_plans_view_holder_linear_layout_1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="25dp"
    android:layout_marginEnd="25dp"
    android:layout_marginBottom="16dp"
    android:background="@drawable/meal_plan_card_drawable"
    android:elevation="4dp"
    android:orientation="vertical"
    app:layout_constraintTop_toTopOf="parent">

    <ImageView
        android:id="@+id/recipe_plan_picture"
        android:layout_width="match_parent"
        android:layout_height="115dp"
        android:contentDescription="@string/main_image_of_recipe"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintTop_toTopOf="parent" />

...
