<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_week"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_week" />

    <item
        android:id="@+id/navigation_plan"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_plan" />

    <item
        android:id="@+id/navigation_shopping"
        android:icon="@drawable/ic_baseline_shoppinglist_24"
        android:title="@string/title_shopping" />

    <item
        android:id="@+id/privacyPolicy"
        android:icon="@drawable/ic_baseline_info_24"
        android:title="@string/privacy_policy" />
</menu>
