<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/plan_day_details_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".plans.screen.details.PlanDayDetailsFragment"
        android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/plan_day_details_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/fragment_plan_details_padding"
            android:clipToPadding="false"
            tools:listitem="@layout/plan_day_details_view_holder"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
    </LinearLayout>
</layout>

