<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="errorMessage"
            type="String" />
    </data>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/general_padding"
        android:orientation="vertical">

        <TextView
            style="@style/TitleHeader"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Calendarweek"
            android:layout_marginBottom="@dimen/general_padding"
            />

        <NumberPicker
            android:id="@+id/number_picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/week_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="15.11.2020" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" - "
                android:textStyle="bold"
                android:paddingHorizontal="@dimen/general_padding"
                />

            <TextView
                android:id="@+id/week_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="22.11.2020" />
        </LinearLayout>

        <TextView
            android:id="@+id/warning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:lines="3"
            android:text="@{errorMessage}"
            android:textAlignment="center"
            android:textColor="@color/red"
            android:textStyle="bold"
            android:visibility="invisible" />

        <Button
            android:id="@+id/assign_button"
            style="@style/Button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Assign" />

    </LinearLayout>
</layout>