...
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="6dp"
                android:background="@drawable/ic_mode_edit_black_24dp"
                android:contentDescription="@string/edit_your_meal_plan" />

            <ImageView
                android:id="@+id/button_schedule_plan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="6dp"
                android:background="@drawable/ic_perm_contact_calendar_black_24dp"
                android:contentDescription="@string/assign_this_meal_plan_to_a_week" />
...
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="6dp"
                android:background="@drawable/ic_delete_black_24dp"
                android:contentDescription="@string/remove_this_meal_plan_from_your_list" />

            <ImageView
                android:id="@+id/button_unsubscribe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="6dp"
                android:background="@drawable/ic_favorite_red_24dp"
                android:contentDescription="@string/unsubscribe_this_meal_plan" />
...
